@@ -1,6 +1,12 @@
 # ChangeLog for www-client/mozilla-firefox
 # Copyright 1999-2008 Gentoo Foundation; Distributed under the GPL v2
-# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox/ChangeLog,v 1.407 2008/05/21 10:45:54 armin76 Exp $
+# $Header: /var/cvsroot/gentoo-x86/www-client/mozilla-firefox/ChangeLog,v 1.408 2008/06/05 14:03:57 armin76 Exp $
+
+*mozilla-firefox-3.0_rc2 (05 Jun 2008)
+
+  05 Jun 2008; Raúl Porcel <armin76@gentoo.org>
+  +mozilla-firefox-3.0_rc2.ebuild:
+  Version bump
 
 *mozilla-firefox-3.0_rc1-r1 (21 May 2008)
 
